schema: Move schema files into a versioned folder
To prepare for future updates to the schema, we use a versioned folder.
Then downstream users, such as cli, can use the schema file from the
versioned folder(s) which the user understands. This will also allow
users to support and validate documents from older schema versions.

We also add the version property to the schema. This is supported by
cli from https://github.com/instruct-lab/cli/pull/417. The version
property is not required for version 1.

Signed-off-by: BJ Hargrave <hargrave@us.ibm.com>

--- a/.github/schemas/v1/knowledge.json
+++ b/.github/schemas/v1/knowledge.json
@@ -2,13 +2,14 @@
     "title": "Knowledge",
     "description": "A knowledge skill.",
     "type": "object",
+    "$ref": "./version.json",
     "required": [
         "created_by",
         "domain",
         "task_description",
         "seed_examples"
     ],
-    "additionalProperties": false,
+    "unevaluatedProperties": false,
     "properties": {
         "created_by": {
             "description": "The GitHub username of the contributor.",
@@ -36,7 +37,7 @@
                     "question",
                     "answer"
                 ],
-                "additionalProperties": false,
+                "unevaluatedProperties": false,
                 "properties": {
                     "question": {
                         "description": "A question used for synthetic data generation.",
