--- a/knowledge/technical_manual/ibm_redbooks/qna.yaml
+++ b/knowledge/technical_manual/ibm_redbooks/qna.yaml
@@ -30,3 +30,10 @@ seed_examples:
     D. It is used for visualizing and navigating the EHS location hierarchy in a graphical
     interface.'
 task_description: ''
+document:
+  repo: <document-repository-url-goes-here>
+  commit: <commit-hash-to-use>
+  pattern:
+    - <file-search-patter 1>
+    - <file-search-patter 2>
+    - <file-search-patter 3>
