--- a/compositional_skills/writing/freeform/poetry/limerick/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/limerick/qna.yaml
@@ -20,12 +20,13 @@ seed_examples:
       You must wear a jacket called pea
     question: Write a limerick about Nantucket.
 
-  - answer: |
+  - answer: This poem has too few lines to be a limerick.
+    context: |
       A town on an island so grand,
       With sandy shores and a salty band,
       But alas, it's not just for fun,
       It's also for whaling, oh what a run!
-    question: Write a poem about Nantucket that is not a limerick.
+    question: Why is this poem about Nantucket not a limerick?
 
   - answer: |
       There was a young woman so grand
@@ -35,12 +36,13 @@ seed_examples:
       Was stuck at the checkout stand
     question: Write a limerick involving books.
 
-  - answer: |
+  - answer: This poem has too few lines to be a limerick.
+    context: |
       A library so grand and so wide,
       With books that fill it inside,
       But alas, it's not just for fun,
       It's also for knowledge, oh what a run!
-    question: Write a poem involving books that is not a limerick.
+    question: Why is this poem involving books not a limerick?
 
   - answer: |
       The beach has lots of sand
@@ -51,11 +53,15 @@ seed_examples:
     question: Write a limerick about the beach.
 
   - answer: |
+      While this poem has the correct number of lines, it does
+      not have the correct rhyme scheme.
+    context: |
       A beach so wide and so grand,
       With waves that crash on the sand,
       But alas, it's not just for play,
-      It's also for tides that come and stay!
-    question: Write a poem about the beach that is not a limerick.
+      It's also for tides that come and stay
+      But I wish the the seagulls would just go away!
+    question: Why is this poem about the beach not a limerick?
 
   - answer: |
       A limerick has five lines you see
@@ -65,12 +71,15 @@ seed_examples:
       ed nonalphabetically
     question: Write a limerick about limericks.
 
-  - answer: |
+  - answer: This poem has too many lines to be a limerick.
+    context: |
       A limerick so short and bright,
       Was written with care in the day's light,
+      It was composed with great might
+      And with a rhyme scheme quite tight
       But alas, it was lost in the night,
       Now it's just a memory, oh what a sight!
-    question: Write a poem about limericks that is not a limerick.
+    question: Why is this poem about limericks not itself a limerick?
 
   - answer: |
       Some like it icy, some like it hot
@@ -80,10 +89,13 @@ seed_examples:
       You can add whiskey if your're a sot
     question: Write a limerick about tea.
 
-  - answer: |
+  - answer: This poem has too many lines to be a limerick.
+    context: |
       A cup of tea, so sweet and bold,
       Was poured with care, oh what a story to be told!
       But alas, it was spilled on the floor,
       Now it's just a puddle, oh what a chore!
-    question: Write a poem about tea that is not a limerick.
+      Because the cup was dropped,
+      The entire floor had to be mopped!
+    question: Why is this poem about tea not a limerick?
 task_description: 'Write a limerick'
