--- a/.github/schemas/v1/knowledge.json
+++ b/.github/schemas/v1/knowledge.json
@@ -8,7 +8,7 @@
         "domain",
         "task_description",
         "seed_examples",
-        "document"
+        "documents"
     ],
     "unevaluatedProperties": false,
     "properties": {
@@ -53,45 +53,17 @@
                 }
             }
         },
-        "document": {
-            "description": "The knowledge documents.",
-            "type": "object",
-            "required": [
-                "repo",
-                "commit",
-                "pattern"
-            ],
-            "unevaluatedProperties": false,
-            "properties": {
-                "repo": {
-                    "description": "The URL to a Git repository holding the knowledge documents.",
-                    "type": "string",
-                    "minLength": 1,
-                    "examples": [
-                        "https://github.com/instruct-lab/cli"
-                    ]
-                },
-                "commit": {
-                    "description": "The commit in the Git repository containing the knowledge documents.",
-                    "type": "string",
-                    "minLength": 1,
-                    "examples": [
-                        "951999a"
-                    ]
-                },
-                "pattern": {
-                    "description": "An array of glob patterns of the knowledge documents in the Git repository.",
-                    "type": "array",
-                    "minItems": 1,
-                    "uniqueItems": true,
-                    "items": {
-                        "type": "string",
-                        "minLength": 1,
-                        "examples": [
-                            "*.md"
-                        ]
-                    }
-                }
+        "documents": {
+            "description": "An array of glob patterns of the knowledge documents relative to the knowledge skill file.",
+            "type": "array",
+            "minItems": 1,
+            "uniqueItems": true,
+            "items": {
+                "type": "string",
+                "minLength": 1,
+                "examples": [
+                    "documents/*.md"
+                ]
             }
         }
     }
