--- a/compositional_skills/writing/freeform/poetry/limerick/qna.yaml
+++ b/compositional_skills/writing/freeform/poetry/limerick/qna.yaml
@@ -60,7 +60,7 @@ seed_examples:
       With waves that crash on the sand,
       But alas, it's not just for play,
       It's also for tides that come and stay
-      But I wish the the seagulls would just go away!
+      But I wish the seagulls would just go away!
     question: Why is this poem about the beach not a limerick?
 
   - answer: |
