--- a/compositional_skills/extraction/structure/json/qna.yaml
+++ b/compositional_skills/extraction/structure/json/qna.yaml
@@ -1,12 +1,35 @@
+task_description: Extract information in structured JSON formats
 created_by: hemslo
 seed_examples:
-- answer: |
+- context: |
+    {
+      "type": "object",
+      "properties": {
+        "location": {
+          "type": "string"
+        },
+        "temperature": {
+          "type": "integer"
+        },
+        "condition": {
+          "type": "string"
+        }
+      },
+      "required": [
+        "location"
+      ]
+    }
+  question: |
+    Extract a valid JSON blob from input that matches the provided JSON Schema.
+    The response must only contain the JSON blob.
+    Input: Sydney is 25 degrees and sunny.
+  answer: |
     {
         "location": "Sydney",
         "temperature": 25,
         "condition": "sunny"
     }
-  context: |
+- context: |
     {
       "type": "object",
       "properties": {
@@ -25,15 +48,15 @@ seed_examples:
       ]
     }
   question: |
-    Extract a valid JSON blob from input that matches the following JSON Schema.
+    Extract a valid JSON blob from input that matches the provided JSON Schema.
     The response must only contain the JSON blob.
-    Input: Sydney is 25 degrees and sunny.
-- answer: |
+    Input: Melbourne is raining.
+  answer: |
     {
-        "location": "Sydney",
+        "location": "Melbourne",
         "condition": "raining"
     }
-  context: |
+- context: |
     {
       "type": "object",
       "properties": {
@@ -52,42 +75,15 @@ seed_examples:
       ]
     }
   question: |
-    Extract a valid JSON blob from input that matches the following JSON Schema.
+    Extract a valid JSON blob from input that matches the provided JSON Schema.
     The response must only contain the JSON blob.
-    Input: Sydney is raining.
-- answer: |
+    Input: Brisbane is 28 degrees.
+  answer: |
     {
-        "location": "Sydney",
-        "temperature": 25
+        "location": "Brisbane",
+        "temperature": 28
     }
-  context: |
-    {
-      "type": "object",
-      "properties": {
-        "location": {
-          "type": "string"
-        },
-        "temperature": {
-          "type": "integer"
-        },
-        "condition": {
-          "type": "string"
-        }
-      },
-      "required": [
-        "location"
-      ]
-    }
-  question: |
-    Extract a valid JSON blob from input that matches the following JSON Schema.
-    The response must only contain the JSON blob.
-    Input: Sydney is 25 degrees.
-- answer: |
-    {
-        "name": "Bob",
-        "age": 10
-    }
-  context: |
+- context: |
     {
       "type": "object",
       "properties": {
@@ -104,32 +100,36 @@ seed_examples:
       ]
     }
   question: |
-    Extract a valid JSON blob from input that matches the following JSON Schema.
+    Extract a valid JSON blob from input that matches the provided JSON Schema.
     The response must only contain the JSON blob.
-    Input: Bob is 10 years old.
-- answer: |
+    Input: Bob is 9 years old.
+  answer: |
+    {
+        "name": "Bob",
+        "age": 9
+    }
+- context: |
+    {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "age": {
+          "type": "integer"
+        }
+      },
+      "required": [
+        "name",
+        "age"
+      ]
+    }
+  question: |
+    Extract a valid JSON blob from input that matches the provided JSON Schema.
+    The response must only contain the JSON blob.
+    Input: Alice was born a decade ago.
+  answer: |
     {
         "name": "Alice",
         "age": 10
     }
-  context: |
-    {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string"
-        },
-        "age": {
-          "type": "integer"
-        }
-      },
-      "required": [
-        "name",
-        "age"
-      ]
-    }
-  question: |
-    Extract a valid JSON blob from input that matches the following JSON Schema.
-    The response must only contain the JSON blob.
-    Input: Alice was born a decade ago.
-task_description: 'Extract information in structured JSON formats'
