Add more examples for function calling
Signed-off-by: Di Wang <dwan@redhat.com>

--- a/compositional_skills/function_calling/tool/qna.yaml
+++ b/compositional_skills/function_calling/tool/qna.yaml
@@ -1,13 +1,7 @@
+task_description: Select suitable tools as function calling
 created_by: hemslo
 seed_examples:
-- answer: |
-    [
-      {
-        "name": "get_current_datetime",
-        "arguments": "{\"iana_timezone\": \"Australia/Sydney\"}"
-      }
-    ]
-  context: |
+- context: |
     response json schema:
 
       {
@@ -73,14 +67,14 @@ seed_examples:
     Select suitable tools for the input, respond with a valid JSON list,
     if no tool is suitable, respond with an empty list.
     What time is it now in Sydney?
-- answer: |
+  answer: |
     [
       {
-        "name": "get_current_weather",
-        "arguments": "{\"location\": \"Sydney\"}"
+        "name": "get_current_datetime",
+        "arguments": "{\"iana_timezone\": \"Australia/Sydney\"}"
       }
     ]
-  context: |
+- context: |
     response json schema:
 
       {
@@ -146,9 +140,14 @@ seed_examples:
     Select suitable tools for the input, respond with a valid JSON list,
     if no tool is suitable, respond with an empty list.
     What is the weather in Sydney?
-- answer: |
-    []
-  context: |
+  answer: |
+    [
+      {
+        "name": "get_current_weather",
+        "arguments": "{\"location\": \"Sydney\"}"
+      }
+    ]
+- context: |
     response json schema:
 
       {
@@ -214,4 +213,109 @@ seed_examples:
     Select suitable tools for the input, respond with a valid JSON list,
     if no tool is suitable, respond with an empty list.
     Give me a random number.
-task_description: 'Select suitable tools as function calling'
+  answer: |
+    []
+- context: |
+    response json schema:
+
+      {
+        "type": "array",
+        "items": [
+          {
+            "type": "object",
+            "properties": {
+              "name": {
+                "type": "string",
+                "description": "The name of the tool to use"
+              },
+              "arguments": {
+                "type": "string"
+                  "description": "The arguments to pass to the tool in JSON format"
+              }
+            },
+            "required": [
+              "name",
+              "arguments"
+            ]
+          }
+        ]
+      }
+
+    tools:
+
+      [
+        {
+          "name": "get_current_weather",
+          "description": "Get the current weather in a given location",
+          "parameters": {
+            "type": "object",
+            "properties": {
+              "location": {
+                "type": "string",
+                "description": "The city or location to get the weather for"
+              }
+            },
+            "required": [
+              "location"
+            ]
+          }
+        }
+      ]
+  question: |
+    Select suitable tools for the input, respond with a valid JSON list,
+    if no tool is suitable, respond with an empty list.
+    What time is it now in Melbourne?
+  answer: |
+    []
+- context: |
+    response json schema:
+
+      {
+        "type": "array",
+        "items": [
+          {
+            "type": "object",
+            "properties": {
+              "name": {
+                "type": "string",
+                "description": "The name of the tool to use"
+              },
+              "arguments": {
+                "type": "string"
+                  "description": "The arguments to pass to the tool in JSON format"
+              }
+            },
+            "required": [
+              "name",
+              "arguments"
+            ]
+          }
+        ]
+      }
+
+    tools:
+
+      [
+        {
+          "name": "get_current_datetime",
+          "description": "Get the current date time in ISO 8601 format for the given IANA timezone",
+          "parameters": {
+            "type": "object",
+            "properties": {
+              "iana_timezone": {
+                "type": "string",
+                "description": "The IANA timezone to use for the current date time. For example, 'Europe/London'."
+              }
+            },
+            "required": [
+              "iana_timezone"
+            ]
+          }
+        }
+      ]
+  question: |
+    Select suitable tools for the input, respond with a valid JSON list,
+    if no tool is suitable, respond with an empty list.
+    What is the weather in Brisbane?
+  answer: |
+    []
