removing ':' from 'like this' answers
Signed-off-by: Anderson Silva <anderson@the-silvas.com>

--- a/compositional_skills/writing/freeform/art/diagram/qna.yaml
+++ b/compositional_skills/writing/freeform/art/diagram/qna.yaml
@@ -1,7 +1,7 @@
 created_by: afsilva
 seed_examples:
   - answer: |
-      like this:
+      like this
       w
        a
         t
@@ -19,7 +19,7 @@ seed_examples:
       - source: self-authored
         license: Apache-2.0
   - answer: |
-      like this:
+      like this
       f
        o
         o
@@ -32,7 +32,7 @@ seed_examples:
       - source: self-authored
         license: Apache-2.0
   - answer: |
-      like this:
+      like this
       b
        a
         n
