Update CODEOWNERS for /synthetic_data/
Allow Tommy to flesh out the synthetic data flow without too much delay

Signed-off-by: Joe Sepi <sepi@joesepi.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -12,3 +12,4 @@
 *.md   @mairin @juliadenham @kelbrown20 @obuzek @lehors @instruct-lab/taxonomy-approvers
 /.github/ @instruct-lab/taxonomy-maintainers @instruct-lab/taxonomy-approvers
 /docs/ @mairin @juliadenham @kelbrown20 @obuzek @lehors @instruct-lab/taxonomy-approvers
+/synthetic_data/ @Tomcli @juliadenham @joesepi @instruct-lab/taxonomy-approvers
