--- a/knowledge/sports/overview/qna.yaml
+++ b/knowledge/sports/overview/qna.yaml
@@ -73,5 +73,5 @@ task_description: 'Overview of the sport of softball'
 document:
   repo: https://github.com/asgharlabs/taxonomy-softball-knowledge
   commit: 3047387170cd0b7e6d94c3a387acd8fa7e1f230b
-  patterns: |
-    softball.md
+  patterns:
+    - softball.md
