--- a/knowledge/sports/overview/softball/qna.yaml
+++ b/knowledge/sports/overview/softball/qna.yaml
@@ -36,27 +36,27 @@ seed_examples:
 - answer: |
     Home plate.
   question: |
-    Where does the batter hit from on the field?
+    Where does the batter hit from on the field in softball?
 - answer: |
     43 feet (13.11 m)
   question: |
-    What is the fastball pitching distance for adult (over 16 years) female distance?
+    What is the fastball softball pitching distance for adult (over 16 years) female distance?
 - answer: |
     43 feet (13.11 m)
   question: |
-    What is the fastball pitching distance for under 16 years but older then 13 female distance?
+    What is the fastball softball pitching distance for under 16 years but older then 13 female distance?
 - answer: |
     35 feet (10.67 m)
   question: |
-    What is the fastball pitching distance for under 10 years but older then 8 female distance?
+    What is the fastball softball pitching distance for under 10 years but older then 8 female distance?
 - answer: |
     wood, aluminum, or composite materials such as carbon fiber
   question: |
-    What are the legal materials a softball bat can be made out of?
+    What are the officially approved materials a softball bat can be made out of?
 - answer: |
     Helmets must be worn by batters and runners.
   question: |
-    Who on the field must wear a helmet?
+    Who on the field must wear a helmet in softball?
 - answer: |
     Most of the time, the game starts with the umpire saying "play ball"
   question: |
@@ -64,11 +64,11 @@ seed_examples:
 - answer: |
     When a throw goes out of the designated play area.
   question: |
-    What is an overthrow or a "wild throw?"
+    What is an overthrow or a "wild throw" in softball?
 - answer: |
     A player that hits in place of one of the position players but does not play defense.
   question: |
-    What is the "Designated player?"
+    What is the "Designated player" in softball?
 task_description: 'Overview of the sport of softball'
 document:
   repo: https://github.com/asgharlabs/softball_knowledge
