check_yaml: Update for better command line use including yamllint
The script now calls yamllint.

It is also updated to work better on
the command line where the user may pass paths not relative to a
taxonomy folder. We compute the schema name from the first path
element or from the presence/absence of the document element.

We remove the need for the matcher by emitting github workflow messages.
Since the script is in control of the messages emitted, we can emit
them in the necessary format rather than having to use a matcher to get
the workflow to match.

Fixes https://github.com/instruct-lab/taxonomy/issues/678

Signed-off-by: BJ Hargrave <hargrave@us.ibm.com>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -55,18 +55,12 @@ jobs:
             knowledge/**/*.yaml
             knowledge/**/*.yml
 
-      - name: "Run YAML lint"
-        if: steps.changed-files.outputs.any_changed == 'true'
-        run: |
-          yamllint -d "{extends: relaxed, rules: {line-length: {max: 120}}}" ${{ steps.changed-files.outputs.all_changed_files }}
-
-      # use yq to verify YAML fields exist and generate a matchable log message with line number and error severity
-      # the added matcher .github/workflows/matchers/lint.json will parse those log messages to generate annotation
-      # the generated annotations are then applied in the GH PR Changed Files view under the changed line of code
-      - name: "Check file contents"
+      - name: "Install Python Packages"
         if: steps.changed-files.outputs.any_changed == 'true'
         run: |
           pip install check-jsonschema
-          echo "::add-matcher::.github/workflows/matchers/lint.json"
-          echo
+
+      - name: "Check YAML file contents"
+        if: steps.changed-files.outputs.any_changed == 'true'
+        run: |
           .github/scripts/check-yaml.sh "${{ steps.changed-files.outputs.all_changed_files }}"
