Removed 24hour to 12hour conversion based on feedback
Signed-off-by: Hit <hshiroya@redhat.com>

--- a/compositional_skills/extraction/information/named_entities/chage_date_format/qna.yaml
+++ b/compositional_skills/extraction/information/named_entities/chage_date_format/qna.yaml
@@ -1,6 +1,6 @@
 ---
 task_description: This skill will identify the time from the given sentence and
-  convert 12-hour format to 24hour format.
+  convert 12-hour format to 24hour format
 created_by: hitshiroya
 seed_examples:
 - question: |
