--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -55,12 +55,24 @@ jobs:
             knowledge/**/*.yaml
             knowledge/**/*.yml
 
+      - name: "Setup Python"
+        if: steps.changed-files.outputs.any_changed == 'true'
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
       - name: "Install Python Packages"
         if: steps.changed-files.outputs.any_changed == 'true'
         run: |
-          pip install check-jsonschema
+          pip install -r .github/scripts/requirements.txt
 
       - name: "Check YAML file contents"
         if: steps.changed-files.outputs.any_changed == 'true'
         run: |
-          .github/scripts/check-yaml.sh "${{ steps.changed-files.outputs.all_changed_files }}"
+          .github/scripts/check-yaml.py "${{ steps.changed-files.outputs.all_changed_files }}"
+        env:
+          SCHEMA_BASE: .github/schemas
+          YAMLLINT_CONFIG: "{extends: relaxed, rules: {line-length: {max: 120}}}"
+          TAXONOMY_FOLDERS: >-
+            compositional_skills
+            knowledge
