--- a/compositional_skills/extraction/information/named_entities/chage_date_format/qna.yaml
+++ b/compositional_skills/extraction/information/named_entities/chage_date_format/qna.yaml
@@ -1,17 +1,27 @@
-task_description: >-
-  This skill will identify the time from the given sentence and convert 12hour
-  time instance to 24hour time instance.
+task_description: This skill will identify the time from the given sentence and
+  convert 12hour time instance to 24hour time instance.
 created_by: hitshiroya
 seed_examples:
-  - question: "In the following passage, please convert instances of 12 hour time to 24 hour time: I will be leaving from Red Hat Tower-6 at 6:30 PM to head to my
-      hotel Cocoon."
+  - question: "In the following passage, please convert instances of 12 hour time to
+      24 hour time: I will be leaving from Red Hat Tower-6 at 6:30 PM to head to
+      my hotel Cocoon."
     answer: I will be leaving from Red Hat Tower-6 at 18:30 to head to my hotel Cocoon.
-  - question: "In the following passage, please convert instances of 12 hour time to 24 hour time: I reached the airport at 3:30 PM and booked a cab at 3:40 PM to
-      reach the hotel."
-    answer: I reached the airport at 15:30 and booked a cab at 15:40 to reach the hotel.
-  - question: "In the following passage, please convert instances of 12 hour time to 24 hour time: I have to reach the airport at 9:50 AM to catch my flight on time."
+  - question: "In the following passage, please convert instances of 12 hour time to
+      24 hour time: I reached the airport at 3:30 PM and booked a cab at 3:40 PM
+      to reach the hotel."
+    answer: I reached the airport at 15:30 and booked a cab at 15:40 to reach the
+      hotel.
+  - question: "In the following passage, please convert instances of 12 hour time to
+      24 hour time: I have to reach the airport at 9:50 AM to catch my flight on
+      time."
     answer: I have to reach the airport at 9:50 AM to catch my flight on time.
-  - question: "In the following passage, please convert instances of 12 hour time to 24 hour time: Everyone should make a habit of waking up early in the morning before 5:30 AM."
-    answer: Everyone should make a habit of waking up early in the morning before 5:30 AM.
-  - question: "In the following passage, please convert instances of 12 hour time to 24 hour time: Company meeting will start at 10:30 in the morning, so make sure you reach on time."
-    answer: Company meeting will start at 10:30 in the morning, so make sure you reach on time.
+  - question: "In the following passage, please convert instances of 12 hour time to
+      24 hour time: Everyone should make a habit of waking up early in the
+      morning before 5:30 AM."
+    answer: Everyone should make a habit of waking up early in the morning before
+      5:30 AM.
+  - question: "In the following passage, please convert instances of 12 hour time to
+      24 hour time: Company meeting will start at 10:30 in the morning, so make
+      sure you reach on time."
+    answer: Company meeting will start at 10:30 in the morning, so make sure you
+      reach on time.
