check-yaml: Fix handling of multiple yaml files
The list of yaml files was incorrectly quoted which resulted in them
being a single argument to the check-yaml script instead of multiple
arguments.

Signed-off-by: BJ Hargrave <hargrave@us.ibm.com>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -69,7 +69,7 @@ jobs:
       - name: "Check YAML file contents"
         if: steps.changed-files.outputs.any_changed == 'true'
         run: |
-          .github/scripts/check-yaml.py "${{ steps.changed-files.outputs.all_changed_files }}"
+          .github/scripts/check-yaml.py ${{ steps.changed-files.outputs.all_changed_files }}
         env:
           SCHEMA_BASE: .github/schemas
           YAMLLINT_CONFIG: "{extends: relaxed, rules: {line-length: {max: 120}}}"
