Fixed a small error with the data

--- a/compositional_skills/extraction/annual_report/plain_text/qna.yaml
+++ b/compositional_skills/extraction/annual_report/plain_text/qna.yaml
@@ -80,9 +80,7 @@ seed_examples:
     industries, clients, and business mix?
 
     '
-- answer: '$7,174,000,000, $8,326,000,000
-
-    '
+- answer: 'The diluted operating (non-GAAP) earnings per share from 2021 were $7.93, and from 2022 they were $9.13. '
   context: "## 8 Management Discussion\n\n## MANAGEMENT DISCUSSION SNAPSHOT\n\n($\
     \ and shares in millions except per share amounts)\n\n| For year ended December\
     \ 31:\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_| 2022 *\_\_\_\_| 2021\_\_\_\_\_\
