Change to more specific regex
Co-authored-by: BJ Hargrave <hargrave@us.ibm.com>
Signed-off-by: Nathan Weinberg <nweinber@redhat.com>

--- a/.github/workflows/actionlint.yml
+++ b/.github/workflows/actionlint.yml
@@ -6,12 +6,12 @@ on:
     branches:
       - "main"
     paths:
-      - '.github/**'
+      - '.github/workflows/*.ya?ml'
   pull_request:
     branches:
       - "main"
     paths:
-      - '.github/**'
+      - '.github/workflows/*.ya?ml'
 
 defaults:
   run:
