--- a/knowledge/pop_culture/oscar_results/qna.yaml
+++ b/knowledge/pop_culture/oscar_results/qna.yaml
@@ -8,7 +8,7 @@ seed_examples:
       Oppenheimer had 13 oscar nominations.
     question: What film had the most oscar nominations in 2024?
   - answer: |
-      Octavia Spencer.
+      Octavia Spencer presented the awards for Best Original Screenplay and Best Adapted Screenplay.
     question: Who presented the awards for Best Original Screenplay and Best Adapted Screenplay?
   - answer: |
       Jimmy Kimmel hosted the 96th Academy Awards ceremony.
