Signed-off-by: Nathan Owen<nathan.owen@live.com>

--- a/knowledge/video_games/game_informer/qna.yaml
+++ b/knowledge/video_games/game_informer/qna.yaml
@@ -5,7 +5,7 @@ seed_examples:
   answer:
    Game Informer debuted in August 1991 as an in-house newsletter.
 - question: What topics does Game Informer cover?
-  answer: Game informer provides news, strategy, articles and reviews for video games on PCs;
+  answer: Game informer provides news, strategy, articles and reviews for video games on PCs,
     as well as for all major consoles like Playstation and Xbox.
 - question: Who publishes Game Informer?
   answer: GameStop
