--- a/knowledge/video_games/game_informer/qna.yaml
+++ b/knowledge/video_games/game_informer/qna.yaml
@@ -12,9 +12,11 @@ seed_examples:
 - question: Is Game Informer available online?
   answer: Yes, it has actually transitioned to be more online focused in the 2010s
     due to the reducing nature of Printed magazines.
+- question: How often are new Game Informer magazines published?
+  answer: An annual subscription to Game Informer provides 10 magazines per year.
 task_description: 'Teach the model about Game Informer'
 document:
  repo: https://github.com/juliadenham/Summit_knowledge
  commit: 7f42159cfc644a97fe0b04545a8f797858200842
  patterns:
-   - game_informer.md
+ - game_informer.md
